# AndromedaDiscordBot

./: main.py  music.py  pyproject.toml  replit_zip_error_log.txt  utils.py
.cache/nix/: binary-cache-v6.sqlite  fetcher-cache-v1.sqlite
.cache/replit/: __replit_disk_meta.json
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.upm/: store.json  store.json555446371
