[tool.poetry]
name = "repl_python3_beta_Andromeda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.2.2"
Flask = "^2.0.2"
youtube_dl = "^2021.6.6"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4"
aiosqlite = "^0.17.0"
PyNaCl = "^1.4.0"
googletrans = "^3.1.0a0"
animec = "^0.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
